# RefactoUI

./: .gitignore  Copilot_AI_Assistant_Instruction.md  OSS_POLICY.md  POETRY_DOCS.md  POETRY_INSTALL.md  progress_log.md  pyproject.toml  refacto_ui_project_plan_v_5.md
notused/: Optimization_RefaktoUI_v1_recomendations.md  RefactoUI_Project_Plan_v2.md  RefactoUI_Project_plan_v1.md  RefactoUI_project_plan_v3.md
refactoui/: config.py  history.py  refactorer.py  rule_engine.py  scanner.py
tests/: test_history.py  test_refactorer.py  test_rule_engine.py  test_scanner.py
ui/: Dockerfile  Dockerfile.tailwind-standalone  README_FIREFOX.md  package-lock.json  package.json
ui/.next/: BUILD_ID  build-manifest.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json  trace
ui/.next/cache/: .previewinfo  .rscinfo  chrome-devtools-workspace-uuid
ui/.next/server/: _error.js  _pages-dir-node_components_DemoRadixDialog_js.js  _pages-dir-node_components_DemoReactQuery_js.js  _pages-dir-node_components_DemoShadcnButton_js.js  _pages-dir-node_components_DemoZustandCounter_js.js  middleware-build-manifest.js  middleware-react-loadable-manifest.js  pages-manifest.json  webpack-api-runtime.js
ui/__tests__/: test_sidebar_tree.test.js  test_toolbar.test.js
ui/components/: DemoRadixDialog.js  DemoReactQuery.js  DemoShadcnButton.js  DemoZustandCounter.js  SidebarTree.js  TitleBar.js  Toolbar.js  test_sidebar_tree.js  test_toolbar.js
ui/pages/: _app.js  auth.js  index.js
ui/public/: 35.DUP86x5U.css  loader.js  manifest.json
(+72 files in other folders)
