[tool.poetry]
name = "refactoui"
version = "0.1.0"
description = "Python Refactoring Tool with Web UI"
authors = ["Team <dev@example.com>"]
[tool.poetry.dependencies]
python = ">=3.9.0"
toml = "^0.10.2"
libcst = "^1.8.2"
black = "^25.1.0"
isort = "^6.0.1"
rich = "^14.0.0"
pyfakefs = "^5.9.1"
structlog = "^25.4.0"
prometheus_client = "^0.20.0"
pluggy = "^1.6.0"
pydantic = "^2.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^5.0.0"
flake8 = "^7.0.0"

[tool.refactoui]
max_nesting_depth = 4
naming_case = "snake_case"
enable_cycle_detection = true
